--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -129,10 +129,10 @@
         gap: 10px;
         margin-top: 16px;
 
-        .profile-pic {
+        .profile_badge {
           @include dFlex();
-          width: 24px;
-          height: 24px;
+          width: 40px;
+          height: 40px;
           border-radius: 50%;
           color: $white;
         }
