--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -80,7 +80,7 @@
             @for (contact of selectedContacts; track $index) {
             <div
               class="profile_badge"
-              [ngStyle]="{'background-color': contact.bgColor}"
+              [ngStyle]="{ 'background-color': contact.bgColor }"
             >
               {{ contact.initials }}
             </div>
@@ -94,7 +94,7 @@
       <div class="right">
         <div class="choice date-input">
           <label for="dueDate">Due date<span>*</span></label>
-          <input type="date" id="dueDate" name="dueDate" />
+          <input [(ngModel)]="newDate" type="date" id="dueDate" name="dueDate" />
         </div>
 
         <div class="choice">
@@ -277,10 +277,25 @@
         This field is required
       </p>
 
-      <div>
+      <div class="btn-submit-section">
         <!-- <button (click)="test()">TEST</button>
         <button (click)="test()">TEST</button> -->
+        @if(true){
+        <button type="button" class="cancel-btn">
+          Cancel
+          <img src="assets/img/icons/cancel.svg" alt="Cancel" />
+        </button>
+        } @else {
+        <button type="button" class="cancel-btn">
+          Clear
+          <img src="assets/img/icons/cancel.svg" alt="Cancel" /></button
+        >}
+
+        <button type="submit" class="create-btn" (click)="submitForm()">
+          Create Task <img src="assets/img/icons/check.svg" alt="Check" />
+        </button>
       </div>
     </div>
+
   </form>
 </section>
