--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -15,7 +15,7 @@ form {
 }
 
 .fill-in-area {
-  @include dFlex($jc: space-between);
+  @include dFlex($jc: space-between, $ai: flex-start);
   width: 100%;
 }
 
@@ -141,7 +141,7 @@ form {
       display: none;
       position: relative;
       z-index: 3;
-      border-radius: 0 0 10px 10px;      
+      border-radius: 0 0 10px 10px;
 
       .assigned_field_contact_list {
         position: absolute;
@@ -243,8 +243,7 @@ form {
   @include dFlex($ai: flex-start, $g: 40px);
   flex-direction: column;
   width: 30.5vw;
-  max-width: 587px;
-  padding-right: 2px;
+  max-width: 587px;  
 }
 
 /*Datum*/
@@ -427,7 +426,7 @@ form {
   z-index: 3;
 
   position: relative;
-  cursor: pointer; 
+  cursor: pointer;
 
   img {
     position: absolute;
@@ -442,7 +441,6 @@ form {
   @include dFlex();
   width: 100%;
   border-radius: 0 0 10px 10px;
-   
 }
 
 .categorySelection {
@@ -453,19 +451,19 @@ form {
   // @include dFlex($jc:space-between);
   flex-direction: column;
   justify-content: space-between;
-  gap:10px;
+  gap: 10px;
 
-  @include font($fs: 20px, $fw: 400);   
-  border-radius: 0 0 10px 10px; 
-  width: 100%;  
+  @include font($fs: 20px, $fw: 400);
+  border-radius: 0 0 10px 10px;
+  width: 100%;
   padding-top: 15px;
   background-color: $white;
   z-index: 2;
 
-  p{
+  p {
     width: 100%;
-    padding: 16px 21px ;
-    cursor: pointer;    
+    padding: 16px 21px;
+    cursor: pointer;
   }
 }
 
@@ -595,6 +593,56 @@ ul {
   }
 }
 
+.cancel-btn,
+.create-btn {
+  padding: 16px 18px;
+  border: none;
+  border-radius: 8px;  
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  > img {
+    margin-left: 3px;
+  }
+}
+
+.create-btn {
+  background: $dark_blue;
+  color: $white;
+  white-space: nowrap;
+  font-size: 21px;
+  font-weight: 700;
+
+
+  &:hover {
+    background-color: $light_blue;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.cancel-btn {
+  border: 1px solid $black;
+  background-color: $white;
+  font-size: 20px;
+
+  &:hover {
+    border-color: $light_blue;
+    color: $light_blue;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    img {
+      filter: invert(56%) sepia(34%) saturate(507%) hue-rotate(165deg)
+        brightness(98%) contrast(95%);
+    }
+  }
+}
+
+.btn-submit-section{
+  @include dFlex($jc: space-between, $g: 30px);
+  margin-top: 4px;
+}
+
 /*--------------------------------------------------   Mobile   --------------------------------------------------*/
 @media (max-width: 1200px) {
   section {
@@ -646,7 +694,6 @@ ul {
   .categorySelection {
     position: relative;
   }
-
 }
 
 @media (max-width: 1024px) {
@@ -754,9 +801,9 @@ ul {
     @include font($fs: 16px, $fw: 400);
   }
 
-    .categorySelection {    
-      @include font($fs: 16px, $fw: 400);
-    }
+  .categorySelection {
+    @include font($fs: 16px, $fw: 400);
+  }
 }
 
 @media (max-width: 400px) {
