refactoring: board header search btn

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -9,7 +9,12 @@
     <div class="board_header_right">
       <div class="input_field">
         <input type="text" placeholder="Find task" />
-        <img src="assets/img/icons/search_icon.svg" alt="" />
+        <div class="input-search-btn">
+          <div class="input-seperator"></div>
+          <div class="search-btn">
+            <img src="assets/img/icons/search_icon.svg" alt="" />
+          </div>
+        </div>
       </div>
       <button class="add_task_btn">
         Add task
