--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -78,7 +78,7 @@
         <p>Subtasks</p>
         @if (selectedTask?.subtasks) { @for (subtask of selectedTask?.subtasks;
         track subtask) {
-        <div (click)="getSub(subtask)" class="subtask">
+        <div class="subtask">
           <span>{{ subtask.text }}</span>
         </div>
         } }
@@ -88,8 +88,24 @@
         <p>Subtasks</p>
         @if (selectedTask?.subtasks) { @for (subtask of selectedTask?.subtasks;
         track subtask) {
-        <div class="subtask">
-          <span>{{ subtask.text }}</span>
+        <div class="subtask" (click)="toggleSubtaskCompleted(subtask)">
+          @if(subtask.IsCompleted){
+          <img
+            class="checkbox-icon"
+            src="assets/img/icons/check_button_checked.svg"
+            alt="Completed Icon"
+          />
+          } @if(!subtask.IsCompleted){
+          <img
+            class="checkbox-icon"
+            src="assets/img/icons/check_button_icon.svg"
+            alt="Uncompleted Icon"
+          />
+          }
+
+          <span [ngClass]="{ 'subtask-completed': subtask.IsCompleted }">
+            {{ subtask.text }}
+          </span>
         </div>
         } }
       </div>
