Added Ad function for Add Task

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -105,8 +105,8 @@
             <button
               class="btn-prio"
               type="button"
-              (click)="setPriority('High')"
-              [class.selectedHigh]="prio === 'High'"
+              (click)="setPriority('Urgent')"
+              [class.selectedHigh]="prio === 'Urgent'"
             >
               Urgent
               <div class="arrow-up"></div>
