--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -152,6 +152,7 @@ form {
         border-radius: 0 0 10px 10px;
         padding-top: 10px;
         overflow: auto;
+        box-shadow: 0px 5px 14px 3px rgba(0, 0, 0, 0.4);
 
         .assigned_field_single_contact {
           @include dFlex($g: 20px);
@@ -442,6 +443,7 @@ form {
   position: absolute;
   top: -15px;
   left: 0;
+  box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.4);
 
   // @include dFlex($jc:space-between);
   flex-direction: column;
