--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -215,6 +215,8 @@
   }
 }
 
+// small-card
+
 .example-box {
   @include dFlex($ai: flex-start, $jc: center, $g: 16px);
   flex-direction: column;
@@ -313,6 +315,7 @@
     border-radius: 50%;
     @include font($fs: 12px, $fw: 400);
     color: $white;
+    background-color: $light_gray;
     min-width: 32px;
     margin-left: -8px;
   }
