--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -28,8 +28,14 @@ form {
     @include font($fs: 61px, $fw: 700);
   }
 
-  .close {
-    display: none;
+  .close-button {
+    display: none; // Standardmäßig ausgeblendet
+
+    &.show {
+      display: block; // Zeigt den Button an, wenn die Klasse "show" hinzugefügt wird
+      z-index: 10;
+      cursor: pointer;
+    }
   }
 }
 
