--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -16,12 +16,23 @@
           </div>
         </div>
       </div>
-      <button class="add_task_btn">
+      <button class="add_task_btn" (click)="taskService.toggleCloseButton()" >
         Add task
         <img src="assets/img/icons/plus_icon.svg" alt="" />
       </button>
     </div>
   </div>
+
+  <!-- Add-Task-Overlay  -->
+@if(taskService.showCloseButton) {
+  <div class="overlay_task">
+    <div class="overlay_bg_white">
+      <app-add-task></app-add-task>
+    </div>
+  </div>
+}
+
+
   <div class="board_content">
     <div class="to_do">
       <div class="board_content_header">
@@ -41,7 +52,11 @@
         (cdkDropListDropped)="drop($event)"
       >
         @for (task of taskService.todoList; track $index) {
-        <app-single-task (click)="setType('todo')" [task]="task" cdkDrag></app-single-task>
+        <app-single-task
+          (click)="setType('todo')"
+          [task]="task"
+          cdkDrag
+        ></app-single-task>
         }
       </div>
     </div>
@@ -63,8 +78,12 @@
         (cdkDropListDropped)="drop($event)"
       >
         @for (task of taskService.progressList; track task) {
-        <app-single-task (click)="setType('inprogess')" [task]="task" cdkDrag></app-single-task>
-        } 
+        <app-single-task
+          (click)="setType('inprogess')"
+          [task]="task"
+          cdkDrag
+        ></app-single-task>
+        }
       </div>
     </div>
     <div class="await_feedback">
@@ -74,7 +93,6 @@
       </div>
       <div class="empty_bg">
         <p>No task awaits feedback</p>
-        
       </div>
       <div
         class="tasks_content"
@@ -86,7 +104,11 @@
         (cdkDropListDropped)="drop($event)"
       >
         @for (task of taskService.feedbackList; track task) {
-        <app-single-task (click)="setType('feedback')" [task]="task" cdkDrag></app-single-task>
+        <app-single-task
+          (click)="setType('feedback')"
+          [task]="task"
+          cdkDrag
+        ></app-single-task>
         }
       </div>
     </div>
@@ -107,9 +129,22 @@
         (cdkDropListDropped)="drop($event)"
       >
         @for (task of taskService.doneList; track task) {
-        <app-single-task (click)="setType('done')" [task]="task" cdkDrag></app-single-task>
+        <app-single-task
+          (click)="setType('done')"
+          [task]="task"
+          cdkDrag
+        ></app-single-task>
         }
       </div>
     </div>
   </div>
+
+  <!-- <div id="taskOverlay" [(ngClass)]="{'d_none': isTaskOverlayOpen}"]> -->
+    <!-- @if(isTaskOverlayOpen) {
+      <div class="overlay_task">
+        <div>
+          <app-add-task [ngStyle]="{'border': '2px solid red'}"></app-add-task>
+        </div>
+      </div>
+    } -->
 </section>
