--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -22,13 +22,13 @@ section {
     border-color: $light_blue;
   }
 
-  > img {
+  >img {
     padding-left: 16px;
     margin-right: 16px;
     height: 32px;
     width: 32px;
     border-left: 1px solid $light_gray;
-    
+
   }
 }
 
@@ -70,6 +70,7 @@ input::placeholder {
     margin-top: 2px;
     margin-left: 2px;
   }
+
   &:hover {
     cursor: pointer;
     background-color: $light_gray;
@@ -89,7 +90,7 @@ input::placeholder {
   padding: 8px 16px;
   white-space: nowrap;
 
-  > img {
+  >img {
     height: 18px;
     width: 18px;
     margin-left: 6px;
@@ -131,7 +132,7 @@ h2 {
 .mobile_add_task_btn {
   display: none;
 
-  > img {
+  >img {
     // background-color: $dark_blue;
     height: 25px;
     width: 24px;
@@ -156,12 +157,13 @@ h2 {
   width: 100%;
   margin-bottom: 23px;
 
-  > button {
+  >button {
     height: 25px;
     width: 24px;
     background-image: url("./../../../../assets/img/icons/add_task_plus.svg");
     background-repeat: none;
     border: none;
+
     &:hover {
       background-image: url("./../../../../assets/img/icons/add_task_plus_hover.svg");
       cursor: pointer;
@@ -188,6 +190,7 @@ h2 {
   height: 50vh;
   // border: 2px solid $light_gray;
 }
+
 .await_feedback {
   @include dFlex($ai: flex-start, $jc: flex-start);
   flex-direction: column;
@@ -197,6 +200,7 @@ h2 {
   height: 50vh;
   // border: 2px solid $light_gray;
 }
+
 .done {
   @include dFlex($ai: flex-start, $jc: flex-start);
   flex-direction: column;
@@ -245,7 +249,7 @@ h3 {
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: top;  
 }
 
 .example-list {
@@ -296,6 +300,11 @@ app-single-task {
   h2 {
     font-size: 16px;
   }
+
+    .board_content {
+      @include dFlex($jc: space-evenly, $g: 10px);
+      padding: 16px;
+    }
 }
 
 @media (max-width: 860px) {
@@ -307,7 +316,8 @@ app-single-task {
 
   .board_header_left {
     @include dFlex($ai: center, $jc: space-between);
-    > h1 {
+
+    >h1 {
       font-size: 47px;
     }
   }
@@ -371,5 +381,31 @@ app-single-task {
   .done {
     width: 100%;
     padding-bottom: 32px;
+  }
+}
+
+/*-------------------------------------------------- Overlay Add-Task --------------------------------------------------*/
+.overlay_task {
+  @include dFlex();
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 100;
+ background-color: rgba($black, 0.87)
+}
+
+.overlay_bg_white {
+  @include dFlex();
+  background-color: $white;  
+  width: 77vw;
+  height: 85vh;
+  border-radius: 24px;
+
+  app-add-task {
+    width: 100%;
+    padding-bottom: 50px;
+    padding-top: 50px;
   }
 }
