--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -264,6 +264,7 @@
   max-height: 256px;
   padding: 16px;
   z-index: 1;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
 
   // border-bottom: solid 1px #ccc;
   border-radius: 10px;
