--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -103,6 +103,14 @@ input::placeholder {
   }
 }
 
+.btn_mobile {
+  display: none;
+}
+
+.btn_desktop {
+  display: block;
+}
+
 h1 {
   @include font($fs: 61px, $fw: 700);
 }
@@ -249,7 +257,7 @@ h3 {
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
-  vertical-align: top;  
+  vertical-align: top;
 }
 
 .example-list {
@@ -301,10 +309,10 @@ app-single-task {
     font-size: 16px;
   }
 
-    .board_content {
-      @include dFlex($jc: space-evenly, $g: 10px);
-      padding: 16px;
-    }
+  .board_content {
+    @include dFlex($jc: space-evenly, $g: 10px);
+    padding: 16px;
+  }
 }
 
 @media (max-width: 860px) {
@@ -393,12 +401,12 @@ app-single-task {
   width: 100%;
   height: 100vh;
   z-index: 100;
- background-color: rgba($black, 0.87)
+  background-color: rgba($black, 0.87)
 }
 
 .overlay_bg_white {
   @include dFlex();
-  background-color: $white;  
+  background-color: $white;
   width: 77vw;
   height: 85vh;
   border-radius: 24px;
@@ -407,5 +415,19 @@ app-single-task {
     width: 100%;
     padding-bottom: 50px;
     padding-top: 50px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .overlay_task {
+    display: none;
+  }
+
+  .btn_mobile {
+    display: block;
+  }
+
+  .btn_desktop {
+    display: none;
   }
 }
