Form clear function added

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -289,9 +289,9 @@
           <img src="assets/img/icons/cancel.svg" alt="Cancel" />
         </button>
         } @else {
-        <button type="button" class="cancel-btn">
+        <button type="button" class="cancel-btn" (click)="clearForm()">
           Clear
-          <img src="assets/img/icons/cancel.svg" alt="Cancel" /></button
+          <img src="assets/img/icons/cancel.svg" alt="Cancel"/></button
         >}
 
         <button type="submit" class="create-btn" >
