--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -88,9 +88,10 @@
     background: $white;
     padding: 32px;
     border-radius: 24px;
-    width: 500px;
-    min-height: 700px;
-    max-height: 930px;
+    width: 550px;
+    height: 950px;
+    // min-height: 850px;
+    // max-height: 950px;
 
     @media (max-width: 580px) {
       width: 85%;
@@ -226,7 +227,7 @@
     .actions-buttons {
       @include dFlex($jc: flex-end);
       position: absolute;
-      bottom: 32px;
+      bottom: 24px;
       right: 32px;
 
       button {
